<resources>
    <string name="app_name" translatable="false">Sportiduino App</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_read_card_label">Read Card</string>
    <string name="fragment_write_card_label">Write Card</string>
    <string name="read_card">Read card</string>
    <string name="write_card">Write card</string>
    <string name="night_mode">Night mode</string>
    <string name="settings_label">Settings</string>
    <string name="password">Password</string>
    <string name="fragment_station_settings_label">Station</string>
    <string name="turn_nfc_on">Turn on NFC</string>
    <string name="bring_card">Bring card…</string>
    <string name="tag_id_s">Tag ID: %s</string>
    <string name="tag_type_s">Tag type: %s</string>
    <string name="card_no">Card No</string>
    <string name="auto_increment">Auto +1</string>
    <string name="state_master_card">State Master Card</string>
    <string name="time_master_card">Time Master Card</string>
    <string name="number_master_card">Number Master Card</string>
    <string name="sleep_master_card">Sleep Master Card</string>
    <string name="config_master_card">Config Master Card</string>
    <string name="password_master_card">Password Master Card</string>
    <string name="backup_master_card">Backup Master Card</string>
    <string name="station_no">Station No</string>
    <string name="button_start">Start</string>
    <string name="button_finish">Finish</string>
    <string name="button_clear">Clear</string>
    <string name="button_check">Check</string>
    <string name="reading_card_dont_remove_it">Reading card, don\'t remove it!</string>
    <string name="card_read_successfully">Card read successfully</string>
    <string name="reading_card_failed">Reading card failed!</string>
    <string name="insert_station_number">Insert station number.</string>
    <string name="writing_card_dont_remove_it">Writing card, don\'t remove it!</string>
    <string name="data_written_to_card_successfully">Data written to card successfully</string>
    <string name="writing_card_failed">Writing card failed!</string>
    <string name="insert_card_number">Insert card number.</string>
    <string name="db">dB</string>
    <string name="version_">Version:</string>
    <string name="state_config_">\nConfig:\n</string>
    <string name="state_battery_">\nBattery:</string>
    <string name="state_mode_">\nMode:</string>
    <string name="state_clock_">\nClock:</string>
    <string name="state_alarm_">\nAlarm:</string>
    <string name="battery_volts">%d%% (%.2f V)</string>
    <string name="battery_ok">OK</string>
    <string name="battery_low">Low</string>
    <string name="config_station_no">Station No:</string>
    <string name="config_start">Start</string>
    <string name="config_finish">Finish</string>
    <string name="config_check">Check</string>
    <string name="config_clear">Clear</string>
    <string name="config_hour">h</string>
    <string name="config_always_active">always</string>
    <string name="config_never_active">never</string>
    <string name="config_active_time">Active time: </string>
    <string name="config_flags">Flags: </string>
    <string name="config_start_as_check">Start as Check</string>
    <string name="config_check_init_time">Check card init time flag</string>
    <string name="config_auto_sleep_flag">Auto sleep flag</string>
    <string name="config_fast_punch_flag">Fast punch flag</string>
    <string name="config_antenna_gain_">Antenna Gain: </string>
    <string name="wakeup_time_">Wakeup time:</string>
    <string name="unknown_card_type">Unknown card type</string>
    <string name="station_no_">Station No</string>
    <string name="record_count">Record count</string>
    <string name="participant_card_no_">Participant card No: </string>
    <string name="clear_time_">Clear time: </string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="write">Write:</string>
    <string name="action_about">About</string>
    <string name="github_url" translatable="false">https://github.com/sportiduino/sportiduinoapp</string>
    <string name="version_s">Version %s</string>
    <string name="app_description">
        Application for working with <b><a href="https://github.com/sportiduino/sportiduino">Sportiduino</a></b> cards.
        NTAG213/215/216, Mifare Classic 1K/4K supported.
    </string>
    <string name="github_title">Github</string>
    <string name="about_copyleft">Copyleft © 2022 — 2026 Sportiduino Contributors.</string>
    <string name="about_license"><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPLv3 License</a></string>
    <string name="beep">Beep</string>
    <string name="new_password">New password</string>
    <string name="auto_sleep">Auto sleep</string>
    <string name="check_init_time_of_card">Check init time of card</string>
    <string name="check_start_finish_punches">Check no punches before start</string>
    <string name="password_separator" translatable="false">-</string>
    <string name="antenna_gain_unknown">unknown</string>
    <string name="enable_fast_punch_when_clear">Enable fast punch when clear</string>
    <string name="fast_punch">Fast punch</string>
    <string name="cleaning_only">Cleaning only</string>
    <string name="countdown_timer">Countdown timer, sec</string>
    <string name="insert_correct_password">Insert correct password</string>
    <string name="incorrect_device_date">Incorrect device date</string>
    <string name="auth_password_master_card">Auth Password Master Card</string>
    <string name="auth_password">Password</string>
    <string name="ntag_write_protection">Write protection</string>
    <string name="ntag_read_protection">Read protection</string>
    <string name="ntag_auth_key">Ntag auth key</string>
    <string name="button_ntag_auth_key_reset">Reset</string>
    <string name="number_255" translatable="false">255</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_0" translatable="false">0</string>
    <string name="card_data_url">URL for sending card data</string>
    <string name="not_specified">not specified</string>
    <string name="course_validation">Card course validation</string>
    <string name="course_validation_success">success</string>
    <string name="course_validation_failure">failure</string>
    <string name="course_validation_type">Validation type</string>
    <string name="course_validation_type_orienteering">orienteering</string>
    <string name="course_validation_type_rogaining">rogaining</string>
    <string name="course_validation_points">Control points</string>
    <string name="course_validation_points_hint">comma-separated list</string>
    <string name="course_validation_points_strict_order">Strict order</string>
    <string name="course_validation_start_time">Start time</string>
    <string name="course_validation_start_time_hint">hh:mm</string>
    <string name="course_validation_duration">Duration (min)</string>
    <string name="course_validation_penalty">Penalty (min)</string>
</resources>
