<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <org.sportiduino.app.PasswordPreference
        android:key="password"
        android:title="@string/password"
        android:summary="" />

    <org.sportiduino.app.NtagAuthKeyPreference
        android:key="ntag_auth_key"
        android:title="@string/ntag_auth_key"
        android:summary="" />

    <org.sportiduino.app.NumberPickerPreference
        android:key="countdown_timer"
        android:title="@string/countdown_timer"
        android:summary=""
        android:defaultValue="2"
        />

    <org.sportiduino.app.CardDataUrlPreference
        android:key="card_data_url"
        android:title="@string/card_data_url"
        android:summary="" />


    <SwitchPreferenceCompat
        android:key="night_mode"
        android:defaultValue="false"
        android:title="@string/night_mode" />

</androidx.preference.PreferenceScreen>
