<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/ScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            tools:context=".FragmentWriteCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_no"
                    android:labelFor="@+id/edit_text_card_number" />

                <EditText
                    android:id="@+id/edit_text_card_number"
                    android:inputType="number"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/number_1"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />

                <CheckBox
                    android:id="@+id/check_box_auto_increment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_increment" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/check_box_fast_punch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fast_punch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/check_box_cleaning_only"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cleaning_only" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/check_box_write_protection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ntag_write_protection" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/check_box_read_protection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ntag_read_protection" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_view_nfc_info"
        style="@style/TextViewNfcInfo"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_view_nfc"
        style="@style/TextViewNfcInfo"
        android:text="@string/turn_nfc_on"
        android:visibility="gone" />
</RelativeLayout>