<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".FragmentStationSettings">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_button_master_get_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_master_card" />

        <RadioButton
            android:id="@+id/radio_button_master_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_master_card" />

        <RadioButton
            android:id="@+id/radio_button_master_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_master_card" />

        <LinearLayout
            android:id="@+id/layout_station_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_no"/>

            <EditText
                android:id="@+id/edit_text_station_number"
                android:defaultValue="0"
                android:inputType="number"
                android:max="255"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:ignore="TextFields" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_button_master_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_master_card" />

        <LinearLayout
            android:id="@+id/layout_wakeup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wakeup time: "/>

            <TextView
                android:id="@+id/text_view_wakeup_date"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle=""
                />

            <TextView
                android:id="@+id/text_view_wakeup_time"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                />

        </LinearLayout>

        <RadioButton
            android:id="@+id/radio_button_master_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_master_card" />

        <RadioButton
            android:id="@+id/radio_button_master_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_master_card" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/text_view_timer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

</LinearLayout>
